--- a/src/test.html
+++ b/src/test.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
   <title>Config Project Bemit</title>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- vendors -->
+  <link rel="stylesheet" href="./assets/vendors/bootstrap/styles/bootstrap.min.css">
   <!-- styles -->
   <link rel="stylesheet" href="assets/styles/main.css">
 </head>
@@ -13,6 +17,11 @@
   <p>Test</p>
 </body>
 
+<!-- vendors - optional javaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="./assets/vendors/jquery/jquery-3.2.1.slim.min.js"></script>
+<script src="./assets/vendors/popper/popper.min.js"></script>
+<script src="./assets/vendors/bootstrap/scripts/bootstrap.min.js"></script>
 <!-- scripts -->
 <script type="text/javascript" src="assets/scripts/bundle.js"></script>
 </html>
